objects/ASI_GnH_Request_Recipient__c.object
<CustomObject>
    <description>G&amp;H Request&apos;s Recipient, used by following countries: 
- Korea</description>
    <fields>
        <fullName>ASI_GnH_Company_Address__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Company_Address__c</formula>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Email__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Email__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Mobile__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Mobile__c</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Organization__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Organization__c</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G&amp;H Recipient</label>
        <referenceTo>ASI_GnH_Recipient_Master__c</referenceTo>
        <relationshipLabel>G&amp;H Request Recipients</relationshipLabel>
        <relationshipName>ASI_GnH_Request_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Request__c</fullName>
        <label>G&amp;H Request</label>
        <referenceTo>ASI_GnH_Request__c</referenceTo>
        <relationshipLabel>G&amp;H Request Recipients</relationshipLabel>
        <relationshipName>GnH_Request_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Company_Address__c</fullName>
        <label>Sys Company Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Email__c</fullName>
        <label>Sys Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Mobile__c</fullName>
        <label>Sys Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Name__c</fullName>
        <label>Sys Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Organization__c</fullName>
        <label>Sys Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Title__c</fullName>
        <label>Sys Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Title__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>G&amp;H Request Recipient</label>
    <nameField>
        <displayFormat>GHR-{000000}</displayFormat>
        <label>G&amp;H Recipient No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G&amp;H Request Recipients</pluralLabel>
    <recordTypes>
        <fullName>ASI_GnH_KR_Request_Recipient</fullName>
        <active>true</active>
        <label>ASI GnH KR Request Recipient</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>